@@ -13,6 +13,7 @@
 		<readme type="file">readme.txt</readme>
 		<modification type="file">mod_index.xml</modification>
 		<modification type="file">mod_admin.xml</modification>
+		<modification type="file">mod_subs.xml</modification>
 		<modification type="file">mod_profile.xml</modification>
 		<modification type="file">mod_profile_modify.xml</modification>
 		<modification type="file">mod_register.xml</modification>
@@ -34,35 +35,11 @@
 		<code>tables.php</code>
 		<remove-file name="$boarddir/esam_upgrade.php" />
 	</install>
-	<install for="2.0 - 2.0 RC2">
-		<readme type="file">readme.txt</readme>
-		<modification type="file">mod_index.xml</modification>
-		<modification type="file">mod_admin.xml</modification>
-		<modification type="file">mod_profile.xml</modification>
-		<modification type="file">mod_profile_modify.xml</modification>
-		<modification type="file">mod_register.xml</modification>
-		<modification type="file">mod_register_template.xml</modification>
-		<modification type="file">mod_profile_template_rc2.xml</modification>
-		<require-file name="TEA.php" destination="$sourcedir" />
-		<require-file name="TEAC.php" destination="$sourcedir" />
-		<require-file name="TEA_TS.php" destination="$sourcedir" />
-		<require-file name="TEA_Cron.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Access.php" destination="$sourcedir" />
-		<require-file name="TEA_TS_Cron_Names.php" destination="$sourcedir" />
-		<require-file name="TEA_xmlhttp.php" destination="$sourcedir" />
-		<require-file name="TEA_SkillDump.php" destination="$sourcedir" />
-		<require-file name="TEA_Roles.php" destination="$sourcedir" />
-		<require-file name="TEA.english.php" destination="$languagedir" />
-		<require-file name="tea.gif" destination="$imagesdir/admin" />
-		<require-file name="esam_upgrade.php" destination="$boarddir" />
-		<require-dir name="TS3_Class" destination="$sourcedir" />
-		<code>tables.php</code>
-		<remove-file name="$boarddir/esam_upgrade.php" />
-	</install>
 	<install>
 		<readme type="inline" parsebbc="true">[color=red]Warning! This mod has not been tested on your version of SMF. Do not procced if you get errors![/color]</readme>
 		<modification type="file">mod_index.xml</modification>
 		<modification type="file">mod_admin.xml</modification>
+		<modification type="file">mod_subs.xml</modification>
 		<modification type="file">mod_profile.xml</modification>
 		<modification type="file">mod_profile_modify.xml</modification>
 		<modification type="file">mod_register.xml</modification>
@@ -88,6 +65,7 @@
 		<readme type="inline">This will uninstall the Temar's EVE API Mod.</readme>
 		<modification type="file" reverse="true">mod_index.xml</modification>
 		<modification type="file" reverse="true">mod_admin.xml</modification>
+		<modification type="file" reverse="true">mod_subs.xml</modification>
 		<modification type="file" reverse="true">mod_profile.xml</modification>
 		<modification type="file" reverse="true">mod_profile_modify.xml</modification>
 		<modification type="file" reverse="true">mod_register.xml</modification>
