@@ -5,6 +5,7 @@ New Features
 - TeamSpeak 3 Support, This includes Registering via User uniqueKey or being on the server and having it find you
   Also Maintains users Access, will smf and Ts group linking, and can enforce nicknames
 - Added Setting of a Main Character and Improved the Realname and Avatar Setting Options
+- Added TEA to profile dropdown menu
 
 Bug Fixes
 - Fixed bug that showed full forum page instead of character list when registering
